Added README.md and updated the global rule guis.